# cv_cpp

./: .gitignore  Computer Vision.xmind  robustMatcher.h
corner_detection/: CMakeLists.txt  Eigen.cpp  corner.py  cvMat_note.cpp  interestPoints.cpp
corner_detection/include/: harrisDetector.h
matching/: CMakeLists.txt  binaryDescriptors.cpp  matcher.cpp  patches.cpp
object_detection/: CMakeLists.txt  detectObjects.cpp  recognizeFace.cpp  terminal.py  trainSVM.cpp
processing_video_sequences/: BGFGSegmentor.h  CMakeLists.txt  foreground.cpp  video_processing.cpp  videoprocessor.h
projection/: CMakeLists.txt  estimateF.cpp  matchingTarget.cpp  robustmatching.cpp
projection/include/: robustMatcher.h  targetMatcher.h
reconstruct3D/: CMakeLists.txt  CameraCalibrator.cpp  CameraCalibrator.h  calibrate.cpp  cameraPose.cpp  estimateE.cpp
tracking/: CMakeLists.txt  featuretracker.h  flow.cpp  oTracker.cpp  tracking.cpp  visualTracker.h
